fixed image stretching issue

--- a/src/index.css
+++ b/src/index.css
@@ -96,6 +96,7 @@
   border-radius: 5%;
   padding: 1.25rem;
   width: 500px;
+  height: 500px;
   border-radius: 50px;
 }
 
